# feedtape-backend

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SETUP.md  docker-compose.yml  nixpacks.toml  openapi.yaml  run_tests.sh  rust-toolchain.toml
.claude/: settings.local.json
.github/workflows/: e2e.yml
.specify/memory/: constitution.md
migrations/: 20250104000000_initial_schema.sql  20251230000000_add_last_read_at_to_feeds.sql  schema.sql
spec/context/: PROJECT_CONTEXT.md  questions.md
spec/mvp/: log.md  plan.yaml
specs/001-i-want-to/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-i-want-to/checklists/: requirements.md
specs/001-i-want-to/contracts/: openapi.yaml
src/: error.rs  http_server.rs.bak  lib.rs  main.rs
src/controllers/: auth.rs  feed.rs  feed_suggestions.rs  health.rs  mod.rs  oauth.rs  tts.rs  user.rs
src/domain/: mod.rs
src/domain/auth/: dto.rs  error.rs  jwt.rs  mod.rs  service.rs
src/domain/feed/: dto.rs  error.rs  mod.rs  model.rs  service.rs
src/domain/feed_suggestions/: mod.rs  service.rs
src/domain/shared/: error_dto.rs  mod.rs  usage_dto.rs
src/domain/tts/: dto.rs  error.rs  language.rs  mod.rs  service.rs
src/domain/user/: dto.rs  error.rs  mod.rs  model.rs  service.rs  voice_mapping.rs
src/infrastructure/: mod.rs
src/infrastructure/auth/: middleware.rs  mod.rs  request_id.rs
src/infrastructure/config/: mod.rs
src/infrastructure/db/: mod.rs
src/infrastructure/http/: mod.rs
src/infrastructure/oauth/: github.rs  mod.rs
src/infrastructure/repositories/: feed_repository.rs  feed_suggestions_repository.rs  mod.rs  openai_tts_repository.rs  polly_tts_repository.rs  refresh_token_repository.rs  tts_repository.rs  usage_repository.rs  user_repository.rs
tests/: README.md  e2e_tests.rs
tests/e2e/: mod.rs  test_auth.rs  test_feed_suggestions.rs  test_feeds.rs  test_health.rs  test_oauth.rs  test_tts.rs  test_user.rs
tests/e2e/helpers/: api_client.rs  assertions.rs  aws_mocks.rs  db_pool.rs  fixtures.rs  mod.rs
