[package]
name = "feedtape-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "rust_decimal"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde"] }

# Authentication
jsonwebtoken = "9.2"

# AWS SDK
aws-config = "1.1"
aws-sdk-polly = "1.13"

# OpenAI SDK
async-openai = "0.24"

# Language detection (only languages we support)
lingua = { version = "1.6", default-features = false, features = ["english", "spanish", "french", "german", "italian", "portuguese"] }

# HTML to text conversion
html2text = "0.12"
regex = "1"

# Environment variables
dotenvy = "0.15"

# HTTP client for OAuth
reqwest = { version = "0.11", features = ["json"] }

# URL encoding
urlencoding = "2.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async traits
async-trait = "0.1"

# Caching
moka = { version = "0.12", features = ["future"] }

[dev-dependencies]
# Test containers for integration tests
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["postgres"] }

# AWS mocking
aws-smithy-runtime-api = { version = "1.1", features = ["test-util"] }
aws-smithy-mocks-experimental = "0.2"

# Test utilities
once_cell = "1.19"
serial_test = "3.0"
test-context = "0.3"
parking_lot = "0.12"

# HTTP client for testing
hyper = { version = "1", features = ["full"] }
hyper-util = "0.1"
http-body-util = "0.1"

# Async runtime for tests
tokio-test = "0.4"

# Assertions
pretty_assertions = "1.4"

# For async utilities in tests
futures = "0.3"
